--- a/card.css
+++ b/card.css
@@ -25,8 +25,18 @@ body{
 }
 
 img{
-    width: 160px;
+    width: 500px;
     box-shadow:0 0 20px rgba(0,0,0,0.2);
+}
+
+.column img:hover{
+  opacity: 0.3;
+
+}
+
+.profile-sidebar img{
+  width: 160px;
+  box-shadow:0 0 20px rgba(0,0,0,0.2);
 }
 
 .profile-position{
@@ -102,7 +112,7 @@ hr {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 70px;
     left: 0;
     top: 0;
     width: 100%;
@@ -113,11 +123,11 @@ hr {
   
   /* Modal Content */
   .modal-content {
-    position: relative;
+    position: sticky;
     margin: auto;
     padding-left: 0;
     width: 90%;
-    max-width: 1000px;
+    max-width: 500px;
   
 
   }
@@ -184,7 +194,7 @@ hr {
     position: absolute;
     top: 0;
   }
-  
+
 
 
 /*  medium devices and up to extra large devices*/
@@ -201,25 +211,25 @@ hr {
   
     @media (min-width: 556px) and (max-width: 756px) {
    .column{
-      height:200px;
-      width:200px;
-      margin-top: 25px;
-      margin-bottom: 25px;
-      margin-right: 25px;
-      margin-left: 25px;
+    height:315px;
+    width:260px;
+    margin-top: -75px;
+    margin-bottom: 25px;
+    margin-right: -60px;
+    margin-left: 70px;
   }
-}
+  }
   
   
    @media (min-width: 446px) and (max-width: 556px) {
   
    .column{
-      height:150px;
-      width:150px;
-      margin-top: 25px;
-      margin-bottom: 25px;
-      margin-right: 25px;
-      margin-left: 20px;
+      height:307px;
+      width:256px;
+      margin-top: -78px;
+      margin-bottom: 7px;
+      margin-right: -58px;
+      margin-left: 35px;
     }
   }
   
@@ -229,7 +239,7 @@ hr {
       height: 325px;
       width:325px;
       margin-right: -15px;
-      margin-left: 20px;
+      margin-left: 35px;
     }
   }
 
