--- a/card.css
+++ b/card.css
@@ -110,7 +110,6 @@ hr {
   /* The Modal (background) */
   .modal {
     display: none;
-    position: fixed;
     z-index: 1;
     padding-top: 70px;
     left: 0;
@@ -119,6 +118,7 @@ hr {
     height: 100%;
     overflow: auto;
     background-color: white;
+    background-size: cover;
   }
   
   /* Modal Content */
@@ -128,6 +128,7 @@ hr {
     padding-left: 0;
     width: 90%;
     max-width: 500px;
+    
   
 
   }
@@ -211,12 +212,12 @@ hr {
   
     @media (min-width: 556px) and (max-width: 756px) {
    .column{
-    height:315px;
-    width:260px;
-    margin-top: -75px;
+    height:350px;
+    width:336px;
+    margin-top: -60px;
     margin-bottom: 25px;
-    margin-right: -60px;
-    margin-left: 70px;
+    margin-right: -80px;
+    margin-left: 58px;
   }
   }
   
