--- a/card.css
+++ b/card.css
@@ -253,10 +253,10 @@ hr {
   }
 }
 
-@media (min-width: 300px) {
+@media (min-width: 300px) and (max-width:576px){
 
   .column{
-    height: 286px;
+    height: 360px;
     width:292px;
     margin-right: -15px;
     margin-left: 20px;
