--- a/home.css
+++ b/home.css
@@ -213,7 +213,7 @@ p{
 button{
     width: 150px;
     color: rgb(255, 255, 255);
-    font-size: 12px;
+    font-size: 16px;
     padding: 12px 0;
     border-radius: 20px;
     margin-top: 20px;
@@ -278,3 +278,28 @@ h5{
 
   /*Navbar referenced from: https://youtu.be/At4B7A4GOPg */ 
 
+  @media (min-width: 300px) and (max-width:576px){
+  .col h1{
+    font-size: 80px;
+  }
+
+  .row{
+    flex-direction: column;
+   
+  }
+
+  .col .pictures{
+    align-content: center;
+    margin-top: 50px;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 768px){
+
+  .col .pictures{
+    align-content: center;
+    margin-top: 50px;
+    margin-left: 15px;
+  }
+}
