--- a/home.css
+++ b/home.css
@@ -6,7 +6,8 @@
 
 body {
     margin: 0;
-    background-color: rgb(249, 248, 255);
+    background-color: rgb(240, 240, 240);
+    align-content: center;
 }
   
   .header-fixed {
@@ -14,7 +15,7 @@ body {
       top: 0;
       z-index: 1;
       width: 100%;
-      background-color:  #996db3;
+      background-color:  #e2c51e;
       box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.1);
   }
   
@@ -22,7 +23,7 @@ body {
       display: flex;
       justify-content: right;
       align-items: center;
-      color: #fff;
+      color: rgb(51, 0, 75);
       line-height: 60px;
   }
   
@@ -34,7 +35,7 @@ body {
       display: block;
       font-size: 30px;
       font-weight: bold;
-      color: #fff;
+      color: rgb(255, 255, 255);
       text-decoration: none;
       padding-left: 10px;
   }
@@ -57,7 +58,6 @@ body {
   .navbar label i {
     height: 2px;
     position: relative;
-    transition: background .2s ease-out;
     width: 18px;
     font-style: normal;
     font-weight: normal;
@@ -92,8 +92,8 @@ body {
     opacity: 0.99;
   }
   .header #navbar-toggle:checked ~ label {
-    background: #8437a7;
-    border-radius: 50%;    
+    background: #e2c51e;
+    border-radius: 20%;    
   }
   .header #navbar-toggle:checked ~ label i {
     background: transparent;
@@ -121,7 +121,8 @@ body {
         height: 100%;
         transition: all 0.3s ease-out;
         display: table;
-        background: #ddd;
+        background: #dddddd;
+  
       }
       .navbar nav ul {
         margin: 0;
@@ -138,17 +139,19 @@ body {
         min-height: 50px;
         font-weight: bold;
         cursor: pointer;
-        transition: all 0.3s ease-out;
+        
       }
       .navbar nav li:hover {
-        background: #9456da;
+        background:rgb(207, 21, 145);
       }
       .navbar nav li:hover a {
         color: #fff;
         transition: all 0.3s ease-out;
       }
       .navbar nav li a {
-        color: #212121;
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 40px;
       }
   }
   
@@ -189,7 +192,7 @@ body {
         display: flex;
         height: 88%;
         align-items: center;
-        padding-top: 130px;
+        padding-top: 90px;
     }
     
     .col{
@@ -198,13 +201,13 @@ body {
     }
 
 h1{
-    color: rgb(127, 82, 165);
+    color: rgb(62, 0, 75);
     font-size: 100px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 p{
-    color: rgb(127, 82, 165);
+    color: rgb(81, 25, 92);
     font-size: 15px;
     line-height: 40px;
     padding-left: 10px;
@@ -215,22 +218,23 @@ button{
     color: rgb(255, 255, 255);
     font-size: 16px;
     padding: 12px 0;
-    border-radius: 20px;
+    border-radius: 15px;
     margin-top: 20px;
-    background-color: rgb(69, 24, 99);
+    margin-left:100px;
+    background-color: rgb(207, 21, 145);
 
 
 }
 
 
 button:hover {
-    background-color: rgb(118, 60, 156);
+    background-color: rgb(248, 47, 181);
     box-shadow: 0px 10px 15px rgba(172, 172, 172, 0.4);
   }
 
 .card{
     width: 250px;
-    height: 250px;
+    height: 285px;
     display: inline-block;
     border-radius: 20px;
     padding: 15px 25px;
@@ -272,15 +276,15 @@ h5{
     color: white;
     text-shadow: 0 0 5px rgb(102, 102, 102);
     text-align: center;
-    padding-top: 210px;
+    padding-top: 245px;
 }
 
 
   /*Navbar referenced from: https://youtu.be/At4B7A4GOPg */ 
 
-  @media (min-width: 300px) and (max-width:576px){
+  @media (min-width: 300px) and (max-width:420px){
   .col h1{
-    font-size: 80px;
+    font-size: 60px;
   }
 
   .row{
@@ -290,16 +294,26 @@ h5{
 
   .col .pictures{
     align-content: center;
-    margin-top: 50px;
-    margin-left: 15px;
+    margin-top: 30%;
+
   }
 }
 
-@media (max-width: 768px){
+@media (min-width: 425px) and (max-width: 768px){
+
+  .row{
+    flex-direction: column;
+  }
 
   .col .pictures{
     align-content: center;
-    margin-top: 50px;
-    margin-left: 15px;
+    margin-top: 15%;
+    margin-left: 10%;
+  }
+
+  
+
+  h1{
+    font-size: 80px;
   }
 }
