--- a/card.css
+++ b/card.css
@@ -418,7 +418,7 @@ a:hover,a.active{
   width: 100%;
   background: #264653;
   text-align: center;
-  color: #f4f4f4;
+  color: #767da5;
 }
 
 .icons{
