--- a/card.css
+++ b/card.css
@@ -120,7 +120,7 @@ hr {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.644);
   background-size: cover;
 }
 
