--- a/card.css
+++ b/card.css
@@ -120,7 +120,7 @@ hr {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.644);
+  background-color: rgba(255, 255, 255, 0.384);
   background-size: cover;
 }
 
@@ -230,7 +230,7 @@ hr {
   }
 
   .mySlides img{
-    width: 340px;
+    width: 505px;
   }
 }
 
@@ -270,7 +270,7 @@ hr {
 
   .modal-content{
     max-width: 318px;
-    margin: 20px;
+    margin: auto;
     padding: 0px;
   }
 }
