--- a/exhibitionshowcase.css
+++ b/exhibitionshowcase.css
@@ -108,6 +108,7 @@ body {
     margin-bottom: 0%;
     margin-left: 20px;
     padding-left: 0px;
+    font-size: 32px;
   }
   
   /*navbar content */
